--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "name": "chat-server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "firebase": "^11.2.0",
+    "node-fetch": "^3.3.2"
+  }
 }
