--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "chat-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "start": "node server.js"
