--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.1.0",
     "node-fetch": "^3.3.2"
   }
 }
