--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "chat-server",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server.js",
+  "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "dev": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "prod": "yarn build && yarn start"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,5 +15,16 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^13.1.0",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "@types/cors": "^2.8.18",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0"
   }
 }
